--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+#content{
+  margin-top: 3%;
+  margin-left: 3%;
+  margin-bottom: 3%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+label{
+  display: inline-block;
+  margin-top: 1%;
+  width: 4%;
+  min-width: 80px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button{
+  margin-top: 1%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+body{
+  min-width: 300px;
+  min-height: 200px;
 }
 
-.App-link {
-  color: #61dafb;
+form:last-child{
+min-width: 200px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#bmi{
+  margin-top: 1%;
+  color:darkred;
 }
+
